force-app/main/default/objects/Opportunity/fields/Choice_Request__c.field-meta.xml
<CustomField>
    <fullName>Choice_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For IL Choice/Mass Markets only</inlineHelpText>
    <label>Choice Request</label>
    <type>Checkbox</type>
</CustomField>