force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Competitor being used by lead</inlineHelpText>
    <label>Competitor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>