force-app/main/default/objects/Opportunity/fields/Credit_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request_Status__c</fullName>
    <label>Credit Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New/Pending Submission</fullName>
            </value>
            <value>
                <fullName>Request Submitted/Credit Review</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Credit Decision - Limit Approved</fullName>
            </value>
            <value>
                <fullName>Credit Decision - Limit Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>