force-app/main/default/objects/Opportunity/fields/Credit_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Requested_Date__c</fullName>
    <label>Credit Requested Date</label>
    <type>DateTime</type>
</CustomField>