force-app/main/default/objects/Opportunity/fields/Date_Limit_Approved_or_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Limit_Approved_or_Rejected__c</fullName>
    <label>Date Limit Approved or Rejected</label>
    <type>DateTime</type>
</CustomField>