force-app/main/default/objects/Opportunity/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <label>DUNS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>