force-app/main/default/objects/Opportunity/fields/Estimated_70_Day_Credit_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Estimated_70_Day_Credit_Exposure__c</fullName>
    <formula>ROUND((Peak_Monthly_Volume__c / 30)  *  Opty_Credit_Price__c  *  70,-3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated 70 Day Credit Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>