force-app/main/default/objects/Opportunity/fields/Expected_Hourly_Volume_Mcf__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hourly_Volume_Mcf__c</fullName>
    <description>Project location&#39;s expected hourly volume in Mcf.  1 Mcf = 1,000 cubic feet.</description>
    <inlineHelpText>Project location&#39;s expected hourly volume in Mcf.  1 Mcf = 1,000 cubic feet.</inlineHelpText>
    <label>Expected Hourly Volume (Mcf)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>