force-app/main/default/objects/Opportunity/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>