force-app/main/default/objects/Opportunity/fields/Fixed_Price_Deal__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Price Deal</label>
    <type>Checkbox</type>
</CustomField>