force-app/main/default/objects/Opportunity/fields/HOU_Primary_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>HOU_Primary_Credit_Limit__c</fullName>
    <label>HOU Primary Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>