force-app/main/default/objects/Opportunity/fields/LDC2__c.field-meta.xml
<CustomField>
    <fullName>LDC2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TDSP__c.inactive_for_Opportunities__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>TDSP__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>