force-app/main/default/objects/Opportunity/fields/LDC_State__c.field-meta.xml
<CustomField>
    <fullName>LDC_State__c</fullName>
    <formula>TEXT( LDC2__r.State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDC State</label>
    <type>Text</type>
</CustomField>