force-app/main/default/objects/Opportunity/fields/Lost_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_Notes__c</fullName>
    <description>Details for why the opportunities were lost.</description>
    <inlineHelpText>Details for why the opportunities were lost.</inlineHelpText>
    <label>Notes for Lost Opportunity</label>
    <type>TextArea</type>
</CustomField>