force-app/main/default/objects/Opportunity/fields/Manager_for_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Manager_for_Approvals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager for Approvals</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>