force-app/main/default/objects/Opportunity/fields/Non_Paid_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Non_Paid_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Paid Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Non-Paid Consultant)</relationshipLabel>
    <relationshipName>NonPaid_Consultant_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>