force-app/main/default/objects/Opportunity/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>