force-app/main/default/objects/Opportunity/fields/One_Time_Project__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a one-time project?</description>
    <inlineHelpText>Is this a one-time project?</inlineHelpText>
    <label>One-Time Project</label>
    <type>Checkbox</type>
</CustomField>