force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Phone__c</fullName>
    <formula>Owner.Phone</formula>
    <label>Opportunity Owner Phone</label>
    <type>Text</type>
</CustomField>