force-app/main/default/objects/Opportunity/fields/Opty_Account_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Opty_Account_DUNS_Number__c</fullName>
    <formula>Account.DUNS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DUNS Number</label>
    <type>Text</type>
</CustomField>