force-app/main/default/objects/Opportunity/fields/Opty_Consultant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opty_Consultant_Phone__c</fullName>
    <formula>Opty_Consultant_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultant Phone</label>
    <type>Text</type>
</CustomField>