force-app/main/default/objects/Opportunity/fields/Opty_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opty_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opty_Contact)</relationshipLabel>
    <relationshipName>Opportunity3</relationshipName>
    <type>Lookup</type>
</CustomField>