force-app/main/default/objects/Opportunity/fields/Opty_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Opty_Contact_Fax__c</fullName>
    <formula>Opty_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Contact Fax</label>
    <type>Text</type>
</CustomField>