force-app/main/default/objects/Opportunity/fields/Opty_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opty_Contact_Phone__c</fullName>
    <formula>Opty_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Contact Phone</label>
    <type>Text</type>
</CustomField>