force-app/main/default/objects/Opportunity/fields/Opty_Estimated_60_Day_Credit_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Opty_Estimated_60_Day_Credit_Exposure__c</fullName>
    <formula>Opty_Peak_Daily_Volume__c  *  Opty_Credit_Price__c  *  60</formula>
    <label>Estimated 60 Day Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>