force-app/main/default/objects/Opportunity/fields/Paid_Consultant_1__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Consultant 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Paid Consultant 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>