force-app/main/default/objects/Opportunity/fields/Paid_Consultant_2__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Consultant 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Paid Consultant 2)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>