force-app/main/default/objects/Opportunity/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <description>CEIP Opportunity project address</description>
    <label>Project Address</label>
    <type>TextArea</type>
</CustomField>