force-app/main/default/objects/Opportunity/fields/Project_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Project_Revenue__c</fullName>
    <label>Project Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>