force-app/main/default/objects/Opportunity/fields/Project_Volume__c.field-meta.xml
<CustomField>
    <fullName>Project_Volume__c</fullName>
    <description>Project volume in Dth.</description>
    <inlineHelpText>Project volume in Dth.</inlineHelpText>
    <label>Project Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>