force-app/main/default/objects/Opportunity/fields/Safari_Contract_Opty_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Safari_Contract_Opty_Sync_Status__c</fullName>
    <description>captures the opportunity number sync&#39;ing with its Safari contract&#39;s Opportunity Number UDF</description>
    <label>Safari Contract Opty Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync in Progress</fullName>
            </value>
            <value>
                <fullName>Sync Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>