force-app/main/default/objects/Opportunity/fields/Secondary_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Credit_Type__c</fullName>
    <label>Secondary Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Payment</fullName>
            </value>
            <value>
                <fullName>Bad Debt Allowance</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Escrow Agreement</fullName>
            </value>
            <value>
                <fullName>Guaranty</fullName>
            </value>
            <value>
                <fullName>Insurance Coverage</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Netout</fullName>
            </value>
            <value>
                <fullName>None Required</fullName>
            </value>
            <value>
                <fullName>Positive Credit Check</fullName>
            </value>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Surety Bond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>