force-app/main/default/objects/Opportunity/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>