force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>if (
   month(today())==12,
   date(year(today())+1, 1, 1), 
   date(year(today()), month(today())+1, 1)
)</defaultValue>
    <description>The start date of the contract/TC (must be the first of the month).</description>
    <inlineHelpText>The start date of the contract/TC (must be the first of the month).</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>