force-app/main/default/objects/Opportunity/fields/STL_Primary_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>STL_Primary_Credit_Limit__c</fullName>
    <label>STL Primary Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>