force-app/main/default/objects/Opportunity/fields/Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Days__c</fullName>
    <description>Project term expressed in days.</description>
    <inlineHelpText>Project term expressed in days.</inlineHelpText>
    <label>Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>