force-app/main/default/objects/Opportunity/fields/Total_Secondary_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Secondary_Credit_Limit__c</fullName>
    <label>Total Secondary Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>