force-app/main/default/objects/Opportunity/fields/Type_and_Stage__c.field-meta.xml
<CustomField>
    <fullName>Type_and_Stage__c</fullName>
    <formula>TEXT(Type) &amp; &quot;: &quot; &amp; TEXT(StageName)</formula>
    <label>Type and Stage</label>
    <type>Text</type>
</CustomField>