force-app/main/default/objects/Opportunity/fields/UF_Name_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Opportunity_Number__c</fullName>
    <formula>&#39;Opportunity Number&#39;</formula>
    <label>UF Name - Opportunity Number</label>
    <type>Text</type>
</CustomField>