force-app/main/default/objects/Opportunity/fields/Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Unit_Margin__c</fullName>
    <inlineHelpText>Price per Dth or kWh</inlineHelpText>
    <label>Unit Margin</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>