force-app/main/default/objects/Opportunity/fields/Utility_Default_Pricing_Scenario_Name__c.field-meta.xml
<CustomField>
    <fullName>Utility_Default_Pricing_Scenario_Name__c</fullName>
    <formula>LDC2__r.Default_Pricing_Scenario__r.Name</formula>
    <label>Utility Default Pricing Scenario Name</label>
    <type>Text</type>
</CustomField>