force-app/main/default/objects/Opportunity/recordTypes/CES_C_I.recordType-meta.xml
<RecordType>
    <fullName>CES_C_I</fullName>
    <active>true</active>
    <businessProcess>CES C%26I</businessProcess>
    <description>Selling natural gas to Commercial/Industrial customers</description>
    <label>CES C&amp;I Gas</label>
</RecordType>