force-app/main/default/objects/Opportunity/recordTypes/CES_C_I_Electric.recordType-meta.xml
<RecordType>
    <fullName>CES_C_I_Electric</fullName>
    <active>true</active>
    <businessProcess>CES C%26I</businessProcess>
    <description>Brokering Electricity for Commercial/Industrial customers</description>
    <label>CES C&amp;I Electric</label>
</RecordType>