force-app/main/default/objects/Opportunity/recordTypes/CES_MES.recordType-meta.xml
<RecordType>
    <fullName>CES_MES</fullName>
    <active>true</active>
    <businessProcess>MES</businessProcess>
    <description>Mobile Energy jobs (temporary CNG/LNG)</description>
    <label>CES MES</label>
</RecordType>