force-app/main/default/objects/Opportunity/recordTypes/NGL.recordType-meta.xml
<RecordType>
    <fullName>NGL</fullName>
    <active>true</active>
    <businessProcess>CES C%26I</businessProcess>
    <description>Natural Gas Liquids</description>
    <label>NGL</label>
</RecordType>