force-app/main/default/objects/Opportunity/recordTypes/TrueCost.recordType-meta.xml
<RecordType>
    <fullName>TrueCost</fullName>
    <active>true</active>
    <businessProcess>TrueCost</businessProcess>
    <description>Used only for sales forecasting</description>
    <label>TrueCost</label>
</RecordType>