force-app/main/default/objects/Opportunity/validationRules/Account_Name_Validation_CEIP.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation_CEIP</fullName>
    <active>true</active>
    <description>Validates the Account field is populated</description>
    <errorConditionFormula>AND(ISBLANK(Account.Name),RecordType.Name = &quot;CEIP&quot;)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account is required for CEIP Opportunities.</errorMessage>
</ValidationRule>