force-app/main/default/objects/Opportunity/validationRules/Cant_save_a_close_date_note_the_1st.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_save_a_close_date_note_the_1st</fullName>
    <active>false</active>
    <errorConditionFormula>and(
  day( CloseDate )!=1,
  isnew()
)</errorConditionFormula>
    <errorMessage>Oppt11: The close date must be the first of a month</errorMessage>
</ValidationRule>