force-app/main/default/objects/Opportunity/validationRules/Demand_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>Demand_Response</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

TEXT( Business_Type__c) = &quot;Demand Response&quot;,

OR(
NOT(ISNULL( Term_Volume__c )),

NOT(ISNULL(  Unit_Margin__c  ))
)
)</errorConditionFormula>
    <errorMessage>Oppt09: Only Total Margin is required for Demand Response business, please leave  term volume and unit margin BLANK.</errorMessage>
</ValidationRule>