force-app/main/default/objects/Opportunity/validationRules/Lost_due_to_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_due_to_Competitor</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Lost_Reasoning__c) = &quot;Competitor&quot;, ISBLANK(Lost_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Notes__c</errorDisplayField>
    <errorMessage>Oppt06: Please name the competitor, and list any other applicable information.</errorMessage>
</ValidationRule>