force-app/main/default/objects/Opportunity/validationRules/Lost_due_to_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_due_to_Contract</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Lost_Reasoning__c) = &quot;Contract&quot;, ISBLANK(Lost_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Notes__c</errorDisplayField>
    <errorMessage>Oppt03: Please briefly explain in this notes field why we lost this opportunity due to the contract.</errorMessage>
</ValidationRule>