force-app/main/default/objects/Opportunity/validationRules/Lost_due_to_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_due_to_Price</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Lost_Reasoning__c)  = &quot;Price&quot;,  ISBLANK(Lost_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Notes__c</errorDisplayField>
    <errorMessage>Oppt02: Please include the number ranking or percent that we lost this deal by in this notes field, if applicable.  Otherwise, please type &quot;N/A&quot;.</errorMessage>
</ValidationRule>