force-app/main/default/objects/Opportunity/validationRules/Lost_due_to_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_due_to_Product</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Lost_Reasoning__c) = &quot;Product&quot;, ISBLANK(Lost_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Notes__c</errorDisplayField>
    <errorMessage>Oppt04: Please briefly explain why we lost this opportunity due to the product in this notes field.</errorMessage>
</ValidationRule>