force-app/main/default/objects/Opportunity/validationRules/Stage_not_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_not_lost</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(NOT(ISBLANK( Lost_Notes__c )), NOT(ISBLANK( TEXT(Lost_Reasoning__c )))), NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)))</errorConditionFormula>
    <errorMessage>Oppt05: Please do not enter lost deal information if the opportunity is not in &quot;Closed Lost&quot; stage.</errorMessage>
</ValidationRule>