force-app/main/default/objects/Opportunity/validationRules/Start_date_must_be_the_1st_of_a_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_must_be_the_1st_of_a_month</fullName>
    <active>false</active>
    <errorConditionFormula>day(Start_Date__c)!=1</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Oppt10: The start date must be the first of the month</errorMessage>
</ValidationRule>